--- a/res.qrc
+++ b/res.qrc
@@ -1,5 +1,3 @@
 <RCC>
-    <qresource prefix="/">
-        <file>8f06eeccf8d2ba00b221eba46e5ff05f.png</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
